Yeni Bilgiler Eklendi

--- a/index.html
+++ b/index.html
@@ -14,13 +14,37 @@
     <p>Ben Muhammet ARSLAN. Denizli'de yaşıyorum. Lisans eğitimimi Bilgisayar Öğretmenliği bölümünde tamamladım. Yazılıma her zaman ilgiliydim fakat kariyer olarak düşünmüyordum. Kodluyoruz ekibinin eğitimlerini keşfettikten sonra Web Yazılım alanında bir kariyere başlamam gerektiğinini farkettim ve işte buradayım.</p>
 <!--Paragraf Kod Satır Bitişi -->
 
-<!--Alt Başlık Kod Satırı -->  <h2>İzlediğim Diziler</h2>
+<!--Alt Başlık Kod Satırı -->  <h2>İlgi Alanlarım</h2>
+<!-- Liste Kod Satırı Başlagıcı -->
+<!--Blok Kod Satırı--> <div>
+<ol>
+    <li>Film</li>
+    <ul>
+        <li><a href="https://www.imdb.com/title/tt4034228/" target="_blank">Manchester by the Sea</a></li>
+        <li>Batman</li>
+        <li>Bir Zamanlar Anadolu'da</li>
+    </ul>
+    <li>Dizi</li>
+    <ul>
+        <li><a href="https://www.imdb.com/title/tt11198330/" target="_blank">House of the Drogon</a></li>
+        <li>Rings of Power</li>
+        <li>Game of Thrones</li>
+    </ul>
+    <li>Kitap</li>
+    <ul>
+        <li><a href="https://www.goodreads.com/book/show/254308.Oblomov?from_search=true&from_srp=true&qid=yA0vteY5O4&rank=1" target="_blank">Oblomov</a></li>
+        <li>Zaman ve Varlık Üzerine</li>
+        <li>Veba</li>
+    </ul>
+</ol>
+</div>
+<!-- Liste Kod Satırı Bitişi -->
+<!--Alt Başlık Kod Satırı -->  <h2>Sevdiğim Diziler</h2>
 <!--Alt Başlık Kod Satırı -->  <h3>House of the Drogon</h3>
-
-<!--Paragraf Kod Satır Başlangıcı --> 
-    <p>Game of Thrones'un spin-off dizisi olan House of the Drogon, hikaye anlatıcılığı ile seyirciyi kendine bağlayan bir yapım.</p>
-    <p>Karakterlerin tasviri, dönemin yaşam biçimi, görsel efektler açısından izlenilmesi gereken bir dizi.</p>
-<!--Paragraf Kod Satır Bitişi -->
-
+<!--Resim Eklediğim Kod Satırı--> <img src="img/house_of_drogon.jpg" alt="Dizi Fotoğrafı" width="200" height="200">
+<!-- Paragraf Kod Satır Başlangıcı --> 
+<p>Game of Thrones'un spin-off dizisi olan House of the Drogon, hikaye anlatıcılığı ile seyirciyi kendine bağlayan bir yapım.</p>
+<p>Karakterlerin tasviri, dönemin yaşam biçimi, görsel efektler açısından izlenilmesi gereken bir dizi.</p>
+<!-- Paragraf Kod Satır Bitişi -->
 </body>
 </html>
